Utilities and auth added
