# api.yml
@@ -7,7 +7,14 @@ consumes:
   - application/json
 produces:
   - application/json
-basePath: "/api"
+basePath: "/api/social"
+securityDefinitions:
+  jwt:
+    type: apiKey
+    name: Authorization
+    in: header
+    x-authentication-scheme: Bearer
+    x-bearerInfoFunc: app.decode_token
 paths:
   /comments/edit:
     put:
